5.0b2 -> 5.0b3:
    - jbj: preliminaries for %foo arbitrary section parsing (not added yet).
    - jbj: start using rpmParseState typedef rather than int.
    - jbj: fix: explicitly add mkdir -p to spec_install_pre.
    - jbj: explicitly compare against PART_NONE, avoid RPMRC_FOO collisions.
    - jbj: fold in patch-as-plain-macro changes.
    - jbj: fix some minor memory leaks.
    - jbj: XAR magic is detected when reading packages, --xar is superfluous.
    - jbj: eliminate development construction scaffholding.

5.0b1 -> 5.0b2:
    - rse: DJBX33A hash with unrolling is more better (no need to measure).
    - afb: made it compile on Cygwin too.
    - jbj: add Foo:Bar:Baz indices for now.
    - jbj: permit arbitrary tags to be indexed by "Name", not Tag_0x12345678.
    - jbj: permit tag aliases in rpmdb index names (Filedigests <-> Filemd5s).
    - jbj: remember (and use) the configured dbi names, not tagName() returns.
    - jbj: fix: configure rpmdb indices using Filedigests, not older Filemd5s.
    - jbj: insure that he->tag is set for use by format extensions.
    - rse: do not segfault on invalid usages like "rpm -qa '!name=foo'"
    - jbj: fix: explicit rpmtsOpenDB on -Kvv code paths.
    - jbj: more bleeping newlines.
    - jbj: put newlines back into the format now that rpmpkg msgs don't supply.
    - rpm.org: Add getter methods for rpmlogRec items (message + level).
    - jbj: another attempt to identify the RPM_I18NSTRING_TYPE flaw.
    - jbj: attempt to measure performance improvement using binary tag search.
    - jbj: trade an I18NSTRING assert failure for a memory leak for the moment.
    - jbj: push rpm2cpio w-i-p into cvs, try to measure linear <-> bsearch win.
    - rpm.org: Logging enhancements (not the best fix, much more needs doing).
    - rpm.org: Make rpmLogRec opaque.
    - rpm.org: Fix misleading indentation.
    - rpm.org: Add python method for for retrieving (without setting) ts vsflags.