@@ -8,6 +8,7 @@
 #include <rpmio_internal.h>	/* XXX fdGetFp, fdInitDigest, fdFiniDigest */
 #define	_RPMFI_INTERNAL		/* XXX fi->fsm */
 #define	_RPMEVR_INTERNAL	/* XXX RPMSENSE_ANY */
+#define _RPMTAG_INTERNAL
 #include <rpmbuild.h>
 #include "signature.h"		/* XXX rpmTempFile */
 
@@ -1110,6 +1111,7 @@ rpmRC packageSources(Spec spec)
     CSA_t csa = &csabuf;
     rpmRC rc;
     int xx;
+    int i;
 
     /* Add rpmlib markers for tracking. */
     (void) rpmlibMarkers(spec->sourceHeader);
@@ -1128,25 +1130,44 @@ rpmRC packageSources(Spec spec)
 	av = argvFree(av);
     }
 
-    if (spec->track != NULL) {
-	const char * track = getStringBuf(spec->track);
-	he->p.str = rpmExpand("%{?__vcheck}", NULL);
-	if (track != NULL && track[0] != '\0'
-	 && he->p.str != NULL && he->p.str[0] != '\0')
-	{
-	    he->tag = RPMTAG_TRACKPROG;
+    if (spec->foo)
+    for (i = 0; i < spec->nfoo; i++) {
+	const char * str = spec->foo[i].str;
+	rpmTag tag = spec->foo[i].tag;
+	StringBuf sb = spec->foo[i].val;
+	char * s;
+
+	if (str == NULL || sb == NULL)
+	    continue;
+
+	/* XXX Special case %track interpreter for now. */
+	if (!xstrcasecmp(str, "track")) {
+	    he->p.str = rpmExpand("%{?__vcheck}", NULL);
+	    if (!(he->p.str != NULL && he->p.str[0] != '\0')) {
+		he->p.str = _free(he->p.str);
+		continue;
+	    }
+	    he->tag = tagGenerate("Trackprog");
 	    he->t = RPM_STRING_TYPE;
-	    he->c = 1;
-	    if (he->p.str != NULL && he->p.str[0] != '\0')
-		xx = headerPut(spec->sourceHeader, he, 0);
-	    he->p.str = _free(he->p.str);
-	    he->tag = RPMTAG_TRACK;
-	    he->t = RPM_STRING_TYPE;
-	    he->p.str = track;
 	    he->c = 1;
 	    xx = headerPut(spec->sourceHeader, he, 0);
-	} else
 	    he->p.str = _free(he->p.str);
+	}
+
+	s = getStringBuf(sb);
+	he->tag = tag;
+	he->append = headerIsEntry(spec->sourceHeader, tag);
+	if (he->append) {
+	    he->t = RPM_STRING_ARRAY_TYPE;
+	    he->p.argv = &s;
+	    he->c = 1;
+	} else {
+	    he->t = RPM_STRING_TYPE;
+	    he->p.str = s;
+	    he->c = 1;
+	}
+	xx = headerPut(spec->sourceHeader, he, 0);
+	he->append = 0;
     }
 
     spec->cookie = _free(spec->cookie);
