@@ -62,10 +62,6 @@ LIBRPMDB_0
     headerVerifyInfo;
     hGetColor;
     _init;
-    _nolead;
-    _newmagic;
-    _tagbsearch;
-    _tagcache;
     _use_xar;
     prDbiOpenFlags;
     rdbOptions;
@@ -134,6 +130,7 @@ LIBRPMDB_0
     tagClean;
     tagGenerate;
     tagName;
+    tagStoreFree;
     tagType;
     tagTypeValidate;
     tagValue;
