@@ -46,10 +46,6 @@ typedef /*@abstract@*/ struct _dbiIndexSet * dbiIndexSet;
  */
 typedef /*@abstract@*/ struct _dbiIndex * dbiIndex;
 
-/** \ingroup rpmdb
- */
-typedef struct dbiTagStore_s * dbiTagStore;
-
 #if defined(_RPMDB_INTERNAL)
 #include <rpmsw.h>
 #if !defined(SWIG)	/* XXX inline dbiFoo() need */
@@ -414,14 +410,6 @@ struct _dbiIndex {
 #endif	/* !defined(SWIG) */
 
 /** \ingroup rpmdb
- */
-struct dbiTagStore_s {
-/*@only@*/
-    const char * str;		/*!< Tag string (might be arbitrary). */
-    int tag;			/*!< Tag value. */
-};
-
-/** \ingroup rpmdb
  * Describes the collection of index databases used by rpm.
  */
 struct rpmdb_s {
@@ -463,7 +451,7 @@ struct rpmdb_s {
     int		db_opens;	/*!< No. of opens for this rpmdb. */
 /*@only@*/ /*@null@*/
     void *	db_dbenv;	/*!< Berkeley DB_ENV handle. */
-    dbiTagStore	db_tags;	/*!< Tag name/value mappings. */
+    tagStore_t	db_tags;	/*!< Tag name/value mappings. */
     size_t	db_ndbi;	/*!< No. of tag indices. */
 /*@only@*/ /*@null@*/
     dbiIndex * _dbi;		/*!< Tag indices. */
